--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,21 +1,31 @@
+<body>
 
-<section class="fomulario">
-    <form action="">
-        <label for="name"> Nombre</label>
-        <input type="text" name="nombre" placeholder="Ingresa tu nombre" [(ngModel)]="nombre" >
+    <section class="fomulario">
+        <form action="">
+            <h1>formulario</h1>
+            <label for="name"> Nombre</label>
+            <input type="text" name="nombre" placeholder="Ingresa tu nombre" [(ngModel)]="nombre" >
+        
+            <label for="name"> Apellido</label>
+            <input type="text" name="apellido" placeholder="Ingresa tu Apellido" [(ngModel)]="apellido">
+        
+        
+            <label for="name"> Email</label>
+            <input type="text" name="email" placeholder="Ingresa tu Email" [(ngModel)]="email">
+        
+            <button (click)="enviar()">Registrar</button>
     
-        <label for="name"> Apellido</label>
-        <input type="text" name="apellido" placeholder="Ingresa tu Apellido" [(ngModel)]="apellido">
     
-    
-        <label for="name"> Email</label>
-        <input type="text" name="email" placeholder="Ingresa tu Email">
-    
-        <button (click)="enviar()">Registrar</button>
+        
+        </form>
+     
+    </section>
+    <section class="registro">
+        <app-registro [nombre]="nombreenviado" 
+                    [apellido]="apellidoenviado"
+                    [email]="emailenviado"
+        ></app-registro>
+     </section>
 
-
-    
-    </form>
-    <app-registro [nombre]="nombreenviado" ></app-registro>
-</section>
+</body>
 
