--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,8 +1,8 @@
 
 <section>
     <label for="">nombre: {{nombre}}</label>
-    <label for="">apellido:</label>
-    <label for="">Email:</label>
+    <label for="">apellido: {{apellido}}</label>
+    <label for="">Email: {{email}}</label>
     
 </section>
 
