--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -3,6 +3,8 @@
     <label for="">nombre: {{nombre}}</label>
     <label for="">apellido: {{apellido}}</label>
     <label for="">Email: {{email}}</label>
+
+    <button (click)="enviardatospadres()" >registro</button>
     
 </section>
 
