--- a/src/app/registro/registro.component.css
+++ b/src/app/registro/registro.component.css
@@ -1,5 +1,33 @@
-section{
+section {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 20px; 
+    margin: 10px 0; 
+  }
+  
+ label{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-}
+    padding: 10px;
+
+ }
+  
+  section label span {
+    font-weight: bold; 
+  }
+  
+  section button {
+    background-color: #4CAF50; 
+    justify-content: center;
+    color: white;
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+  }
+  
+  
+  section button:hover {
+    background-color: #3e8e41; 
+  }
+  
